--- a/client/src/variables.scss
+++ b/client/src/variables.scss
@@ -398,6 +398,31 @@ $extra-padding-content-block-xl: $x10 $x9 $x11;
   }
 }
 
+@mixin setContactCardGap() {
+  gap: $inner-gap-large-s;
+  .contact-person {
+    gap: $inner-gap-s;
+  }
+  @media only screen and (min-width: $width-xs) {
+    gap: $inner-gap-s;
+    .contact-person {
+      gap: $inner-gap-medium-s;
+    }
+  }
+  @media only screen and (min-width: $width-m) {
+    gap: $inner-gap-large-m;
+    .contact-person {
+      gap: $inner-gap-m;
+    }
+  }
+  @media only screen and (min-width: $width-l) {
+    gap: $inner-gap-l;
+    .contact-person {
+      gap: $inner-gap-medium-l;
+    }
+  }
+}
+
 @mixin setVerticalShadowLine() {
   &::after {
     content: "";
